# xtal

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  context.md  index.md
sketches/: Cargo.toml
sketches/src/: constants.rs  main.rs
sketches/src/core/: acc.rs  acc.wgsl  acc.yaml  blob.rs  blob.wgsl  blob.yaml  cloud.rs  cloud.wgsl  cloud.yaml  d_warp.rs  d_warp.wgsl  d_warp.yaml  dreams.rs  dreams.wgsl  dreams.yaml  dyn_uni.rs  dyn_uni.wgsl  dyn_uni.yaml  flow.rs  flow.wgsl  flow.yaml  grid_splash.rs  grid_splash.wgsl  grid_splash.yaml  grid_splash_bw.rs  grid_splash_bw.wgsl  grid_splash_bw.yaml  gyroid.rs  gyroid.yaml  hatch.rs  hatch.wgsl  hatch.yaml  ink.rs  ink.yaml  interference.rs  interference.wgsl  interference.yaml  marcher.rs  marcher.wgsl  marcher.yaml  (+25 more)
sketches/src/dev/: animation_dev.rs  animation_dev.wgsl  animation_dev.yaml  clock_dev.rs  clock_dev.wgsl  clock_dev.yaml  mod.rs
sketches/src/drafts/: displ.rs  displ.wgsl  displ.yaml  domain_warps.rs  domain_warps.wgsl  domain_warps.yaml  grid_splash_bw.rs  interference.rs  interference.wgsl  interference.yaml  layers.rs  layers.wgsl  layers.yaml  mod.rs  phase_matrix.rs  phase_matrix.wgsl  phase_matrix.yaml  sline.wgsl  wave_sphere.wgsl  wave_sphere.yaml
sketches/src/sketches/: blob.rs  blob.wgsl  blob.yaml  cloud_tunnel.wgsl  cloud_tunnel.yaml  d_warp.yaml  grid_splash.wgsl  interference.wgsl  mod.rs  neural.rs  neural.yaml
sketches/src/sketches/auto/: auto_757.rs  auto_757.wgsl  auto_757.yaml  auto_acc.rs  auto_acc.wgsl  auto_acc.yaml  auto_cloud.rs  auto_cloud.yaml  auto_dreams.rs  auto_dreams.wgsl  auto_dreams.yaml  auto_dyn_uni.rs  auto_dyn_uni.wgsl  auto_dyn_uni.yaml  auto_flow.rs  auto_flow.yaml  auto_grid_splash.rs  auto_grid_splash.yaml  auto_grid_splash_b&w.yaml  auto_grid_splash_bw.rs  auto_grid_splash_bw.yaml  auto_gyroid.rs  auto_gyroid.wgsl  auto_gyroid.yaml  auto_gyroid_post.wgsl  auto_hatch.rs  auto_hatch.wgsl  auto_hatch.yaml  auto_ink.rs  auto_ink.wgsl  auto_ink.yaml  auto_ink_post.wgsl  auto_rm.rs  auto_rm.yaml  auto_sline.rs  auto_sline.wgsl  auto_sline.yaml  auto_spiral.rs  (+18 more)
sketches/src/templates/: basic.rs  basic.wgsl  compute.rs  compute_present.wgsl  feedback.rs  feedback.wgsl  feedback.yaml  image.rs  image.wgsl  mod.rs  multipass.rs  multipass_a.wgsl  multipass_b.wgsl
sketches/storage/: global_settings.json  images_metadata.json
sketches/storage/Controls/: acc_controls.json  auto_757_controls.json  auto_acc_controls.json  auto_cloud.json  auto_dyn_uni_controls.json  auto_flow_controls.json  auto_grid_splash_bw_controls.json  auto_grid_splash_controls.json  auto_grid_splash_controls_B&W.json  auto_grid_splash_controls_PURPLE_BAK.json  auto_gyroid_controls.json  auto_hatch_controls.json  auto_ink_controls.json  auto_sline_controls.json  auto_spiral_controls.json  auto_topo_controls.json  auto_un2_controls.json  auto_un_controls.json  auto_water_controls.json  auto_wave_fract.json  auto_wave_fract_controls.json  blob_controls.json  d_warp_controls.json  displ_controls.json  domain_warps_controls.json  dreams_controls.json  drop_controls.json  g26_11_quine_controls.json  g26_12_boxes_controls.json  g26_13_portrait_controls.json  g26_14_dreams_controls.json  g26_15_controls.json  grid_splash_bw_controls.json  grid_splash_controls.json  gyroid_controls.json  hatch_controls.json  ink_controls.json  interference_controls.json  layers_controls.json  marcher_controls.json  (+12 more)
xtal/: Cargo.toml
xtal/src/: lib.rs  prelude.rs
xtal/src/control/: audio_controls.rs  config.rs  control_hub.rs  control_traits.rs  dep_graph.rs  eval_cache.rs  map_mode.rs  midi_controls.rs  osc_controls.rs  param_mod.rs  ui_controls.rs
xtal/src/core/: logging.rs  mod.rs  prelude.rs
xtal/src/framework/: audio.rs  gpu.rs  midi.rs  mod.rs  osc_receiver.rs  prelude.rs  util.rs
xtal/src/io/: audio.rs  midi.rs  mod.rs  osc.rs
xtal/src/motion/: animation.rs  effects.rs  timing.rs
xtal/src/render/: frame.rs  gpu.rs  graph.rs  mesh.rs  mod.rs  shader_watch.rs  uniforms.rs
xtal/src/runtime/: app.rs  events.rs  frame_recorder.rs  global.rs  mod.rs  monitor_preview.rs  recorder.rs  recording.rs  registry.rs  serialization.rs  storage.rs  web_view.rs  web_view_bridge.rs  web_view_process.rs
xtal/src/sketches/: mod.rs  sketch.rs  sketch_assets.rs
xtal/src/time/: frame_clock.rs  mod.rs  tap_tempo.rs
xtal/tests/: control_hub_snapshot_transition.rs  runtime_frame_clock_and_gpu_smoke.rs  runtime_registration_and_assets.rs  runtime_registry_and_channels.rs  runtime_web_view_event_mapping.rs
xtal/tests/support/: mod.rs
xtal2/: Cargo.toml
xtal2/src/: app.rs  controls.rs  frame.rs  gpu.rs  graph.rs  lib.rs  prelude.rs  registration_macros.rs  shader_watch.rs  sketch.rs  sketch_assets.rs  uniforms.rs
xtal2/src/control/: audio_controls.rs  config.rs  control_hub.rs  dep_graph.rs  map_mode.rs  midi_controls.rs  mod.rs  osc_controls.rs  param_mod.rs
xtal2/src/framework/: audio.rs  frame_controller.rs  logging.rs  midi.rs  mod.rs  prelude.rs
xtal2/src/motion/: animation.rs  effects.rs  mod.rs  timing.rs
xtal2/src/render/: frame.rs  gpu.rs  shader_watch.rs  uniforms.rs
xtal2/src/runtime/: app.rs  context.rs  events.rs  frame_clock.rs  frame_recorder.rs  mod.rs  recording.rs  registry.rs  serialization.rs  web_view.rs  web_view_bridge.rs
xtal2/src/sketches/: sketch.rs
xtal2/tests/: debug_snapshot_grid.rs  runtime_phase0.rs  runtime_phase1.rs  runtime_phase2.rs  runtime_phase7.rs
(+114 files in other folders)
