[package]
name = "sketches"
version = "0.0.1"
authors = ["Lokua <dev@lokua.net>"]
edition = "2024"
default-run = "sketches"
license = "MIT"

[features]
default = ["recording-report"]
recording-report = ["xtal/recording-report"]

[dependencies]
bevy_reflect = { version = "0.15.1", features = ["glam"] }
bytemuck = "1.21.0"
env_logger = "0.11.5"
xtal = { path = "../xtal", features = ["logging"] }
log = "0.4.22"
nannou = "0.19.0"
rayon = "1.10.0"
termcolor = "1.4.1"
