[package]
name = "xtal2"
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace]

[features]
default = ["xtal2"]
legacy_runtime = []
xtal2 = []

[dependencies]
bytemuck = { version = "1.25", features = ["derive"] }
env_logger = "0.11.9"
log = "0.4.29"
naga = { version = "26", features = ["wgsl-in"] }
notify = "8.2"
pollster = "0.4"
png = "0.18.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yml = "0.0.12"
yaml-merge-keys = { version = "0.8.1", features = ["serde_yml"] }
wgpu = { version = "26", default-features = false, features = [
    "wgsl",
    "dx12",
    "metal",
    "vulkan",
    "gles",
] }
winit = "0.30.12"

[dev-dependencies]
pollster = "0.4"
wgpu = { version = "26", default-features = false, features = [
    "wgsl",
    "dx12",
    "metal",
    "vulkan",
    "gles",
] }
