[package]
name = "xtal2"
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace]

[features]
default = ["xtal2"]
legacy_runtime = []
xtal2 = []

[dependencies]
ahash = "0.8.11"
bytemuck = { version = "1.25", features = ["derive"] }
env_logger = "0.11.9"
indexmap = { version = "2.12.1", features = ["serde"] }
log = "0.4.29"
naga = { version = "26", features = ["wgsl-in"] }
notify = "8.2"
pollster = "0.4"
png = "0.18.0"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_yml = "0.0.12"
termcolor = "1.4.1"
yaml-merge-keys = { version = "0.8.1", features = ["serde_yml"] }
wgpu = { version = "26", default-features = false, features = [
    "wgsl",
    "dx12",
    "metal",
    "vulkan",
    "gles",
] }
winit = "0.30.12"

[dev-dependencies]
pollster = "0.4"
serial_test = "3.2.0"
wgpu = { version = "26", default-features = false, features = [
    "wgsl",
    "dx12",
    "metal",
    "vulkan",
    "gles",
] }
